omni/tests/goldens/types/unknown_type_07.err
tests/goldens/types/unknown_type_07.omni:1:12: error: unknown type "Mystery7"
     1 | let value7:Mystery7 = 1
       |            ^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_07.omni:1:1: error: cannot assign int to Mystery7
     1 | let value7:Mystery7 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery7 or change the variable type to int
