omni/tests/goldens/types/unknown_type_07.omni
let value7:Mystery7 = 1
